# transmission-multiple-watch-folders

./: .gitignore  README.md  main.py  pyproject.toml  startup.sh  transmission-dir-watcher.service
transmission_dir_watcher/: main.py
transmissionrpc/: __init__.py  client.py  constants.py  error.py  httphandler.py  session.py  torrent.py  utils.py
